--- a/assets/style.css
+++ b/assets/style.css
@@ -162,6 +162,10 @@ h2{
     box-shadow: 5px 5px 5px rgb(0, 76, 255);
     margin-top: 20px;
 }
+.project-card:hover{
+    background-color: rgb(196, 54, 54); 
+    color:rgb(128, 25, 25);
+}
 
 
 .project-container{
